--- a/css/12bool.css
+++ b/css/12bool.css
@@ -134,355 +134,5 @@
 
 /* Mediaquery XS*/
 
-@media all and (min-width: 0px) and (min-width:575px) {
-    /* Col */
-    .col-xs-1 {
-        flex-basis: calc((100% / 12) * 1);
-        max-width: calc((100% / 12) * 1);
-    }
-    .col-xs-2 {
-        flex-basis: calc((100% / 12) * 2);
-        max-width: calc((100% / 12) * 2);
-    }
-    .col-xs-3 {
-        flex-basis: calc((100% / 12) * 3);
-        max-width: calc((100% / 12) * 3);
-    }
-    .col-xs-4 {
-        flex-basis: calc((100% / 12) * 4);
-        max-width: calc((100% / 12) * 4);
-    }
-    .col-xs-5 {
-        flex-basis: calc((100% / 12) * 5);
-        max-width: calc((100% / 12) * 5);
-    }
-    .col-xs-6 {
-        flex-basis: calc((100% / 12) * 6);
-        max-width: calc((100% / 12) * 6);
-    }
-    .col-xs-7 {
-        flex-basis: calc((100% / 12) * 7);
-        max-width: calc((100% / 12) * 7);
-    }
-    .col-xs-8 {
-        flex-basis: calc((100% / 12) * 8);
-        max-width: calc((100% / 12) * 8);
-    }
-    .col-xs-9 {
-        flex-basis: calc((100% / 12) * 9);
-        max-width: calc((100% / 12) * 9);
-    }
-    .col-xs-10 {
-        flex-basis: calc((100% / 12) * 10);
-        max-width: calc((100% / 12) * 10);
-    }
-    .col-xs-11 {
-        flex-basis: calc((100% / 12) * 11);
-        max-width: calc((100% / 12) * 11);
-    }
-    .col-xs-12 {
-        flex-basis: calc((100% / 12) * 12);
-        max-width: calc((100% / 12) * 12);
-    }
-    /* Col Offset */
-    .col-xs-offset-1 {
-        margin-left: calc((100% / 12) * 1);
-    }
-    .col-xs-offset-2 {
-        margin-left: calc((100% / 12) * 2);
-    }
-    .col-xs-offset-3 {
-        margin-left: calc((100% / 12) * 3);
-    }
-    .col-xs-offset-4 {
-        margin-left: calc((100% / 12) * 4);
-    }
-    .col-xs-offset-5 {
-        margin-left: calc((100% / 12) * 5);
-    }
-    .col-xs-offset-6 {
-        margin-left: calc((100% / 12) * 6);
-    }
-    .col-xs-offset-7 {
-        margin-left: calc((100% / 12) * 7);
-    }
-    .col-xs-offset-8 {
-        margin-left: calc((100% / 12) * 8);
-    }
-    .col-xs-offset-9 {
-        margin-left: calc((100% / 12) * 9);
-    }
-    .col-xs-offset-10 {
-        margin-left: calc((100% / 12) * 10);
-    }
-    .col-xs-offset-11 {
-        margin-left: calc((100% / 12) * 11);
-    }
-}
 
-
-/* Mediaquery S*/
-
-@media all and (min-width: 576px) and (min-width:767px) {
-    /* Col */
-    .col-s-1 {
-        flex-basis: calc((100% / 12) * 1);
-        max-width: calc((100% / 12) * 1);
-    }
-    .col-s-2 {
-        flex-basis: calc((100% / 12) * 2);
-        max-width: calc((100% / 12) * 2);
-    }
-    .col-s-3 {
-        flex-basis: calc((100% / 12) * 3);
-        max-width: calc((100% / 12) * 3);
-    }
-    .col-s-4 {
-        flex-basis: calc((100% / 12) * 4);
-        max-width: calc((100% / 12) * 4);
-    }
-    .col-s-5 {
-        flex-basis: calc((100% / 12) * 5);
-        max-width: calc((100% / 12) * 5);
-    }
-    .col-s-6 {
-        flex-basis: calc((100% / 12) * 6);
-        max-width: calc((100% / 12) * 6);
-    }
-    .col-s-7 {
-        flex-basis: calc((100% / 12) * 7);
-        max-width: calc((100% / 12) * 7);
-    }
-    .col-s-8 {
-        flex-basis: calc((100% / 12) * 8);
-        max-width: calc((100% / 12) * 8);
-    }
-    .col-s-9 {
-        flex-basis: calc((100% / 12) * 9);
-        max-width: calc((100% / 12) * 9);
-    }
-    .col-s-10 {
-        flex-basis: calc((100% / 12) * 10);
-        max-width: calc((100% / 12) * 10);
-    }
-    .col-s-11 {
-        flex-basis: calc((100% / 12) * 11);
-        max-width: calc((100% / 12) * 11);
-    }
-    .col-s-12 {
-        flex-basis: calc((100% / 12) * 12);
-        max-width: calc((100% / 12) * 12);
-    }
-    /* Col Offset */
-    .col-s-offset-1 {
-        margin-left: calc((100% / 12) * 1);
-    }
-    .col-s-offset-2 {
-        margin-left: calc((100% / 12) * 2);
-    }
-    .col-s-offset-3 {
-        margin-left: calc((100% / 12) * 3);
-    }
-    .col-s-offset-4 {
-        margin-left: calc((100% / 12) * 4);
-    }
-    .col-s-offset-5 {
-        margin-left: calc((100% / 12) * 5);
-    }
-    .col-s-offset-6 {
-        margin-left: calc((100% / 12) * 6);
-    }
-    .col-s-offset-7 {
-        margin-left: calc((100% / 12) * 7);
-    }
-    .col-s-offset-8 {
-        margin-left: calc((100% / 12) * 8);
-    }
-    .col-s-offset-9 {
-        margin-left: calc((100% / 12) * 9);
-    }
-    .col-s-offset-10 {
-        margin-left: calc((100% / 12) * 10);
-    }
-    .col-s-offset-11 {
-        margin-left: calc((100% / 12) * 11);
-    }
-}
-
-
-/* Mediaquery M*/
-
-@media all and (min-width: 768px) and (min-width:991px) {
-    /* Col */
-    .col-m-1 {
-        flex-basis: calc((100% / 12) * 1);
-        max-width: calc((100% / 12) * 1);
-    }
-    .col-m-2 {
-        flex-basis: calc((100% / 12) * 2);
-        max-width: calc((100% / 12) * 2);
-    }
-    .col-m-3 {
-        flex-basis: calc((100% / 12) * 3);
-        max-width: calc((100% / 12) * 3);
-    }
-    .col-m-4 {
-        flex-basis: calc((100% / 12) * 4);
-        max-width: calc((100% / 12) * 4);
-    }
-    .col-m-5 {
-        flex-basis: calc((100% / 12) * 5);
-        max-width: calc((100% / 12) * 5);
-    }
-    .col-m-6 {
-        flex-basis: calc((100% / 12) * 6);
-        max-width: calc((100% / 12) * 6);
-    }
-    .col-m-7 {
-        flex-basis: calc((100% / 12) * 7);
-        max-width: calc((100% / 12) * 7);
-    }
-    .col-m-8 {
-        flex-basis: calc((100% / 12) * 8);
-        max-width: calc((100% / 12) * 8);
-    }
-    .col-m-9 {
-        flex-basis: calc((100% / 12) * 9);
-        max-width: calc((100% / 12) * 9);
-    }
-    .col-m-10 {
-        flex-basis: calc((100% / 12) * 10);
-        max-width: calc((100% / 12) * 10);
-    }
-    .col-m-11 {
-        flex-basis: calc((100% / 12) * 11);
-        max-width: calc((100% / 12) * 11);
-    }
-    .col-m-12 {
-        flex-basis: calc((100% / 12) * 12);
-        max-width: calc((100% / 12) * 12);
-    }
-    /* Col Offset */
-    .col-m-offset-1 {
-        margin-left: calc((100% / 12) * 1);
-    }
-    .col-m-offset-2 {
-        margin-left: calc((100% / 12) * 2);
-    }
-    .col-m-offset-3 {
-        margin-left: calc((100% / 12) * 3);
-    }
-    .col-m-offset-4 {
-        margin-left: calc((100% / 12) * 4);
-    }
-    .col-m-offset-5 {
-        margin-left: calc((100% / 12) * 5);
-    }
-    .col-m-offset-6 {
-        margin-left: calc((100% / 12) * 6);
-    }
-    .col-m-offset-7 {
-        margin-left: calc((100% / 12) * 7);
-    }
-    .col-m-offset-8 {
-        margin-left: calc((100% / 12) * 8);
-    }
-    .col-m-offset-9 {
-        margin-left: calc((100% / 12) * 9);
-    }
-    .col-m-offset-10 {
-        margin-left: calc((100% / 12) * 10);
-    }
-    .col-m-offset-11 {
-        margin-left: calc((100% / 12) * 11);
-    }
-}
-
-
-/* Mediaquery L*/
-
-@media all and (min-width: 992px) {
-    /* Col */
-    .col-l-1 {
-        flex-basis: calc((100% / 12) * 1);
-        max-width: calc((100% / 12) * 1);
-    }
-    .col-l-2 {
-        flex-basis: calc((100% / 12) * 2);
-        max-width: calc((100% / 12) * 2);
-    }
-    .col-l-3 {
-        flex-basis: calc((100% / 12) * 3);
-        max-width: calc((100% / 12) * 3);
-    }
-    .col-l-4 {
-        flex-basis: calc((100% / 12) * 4);
-        max-width: calc((100% / 12) * 4);
-    }
-    .col-l-5 {
-        flex-basis: calc((100% / 12) * 5);
-        max-width: calc((100% / 12) * 5);
-    }
-    .col-l-6 {
-        flex-basis: calc((100% / 12) * 6);
-        max-width: calc((100% / 12) * 6);
-    }
-    .col-l-7 {
-        flex-basis: calc((100% / 12) * 7);
-        max-width: calc((100% / 12) * 7);
-    }
-    .col-l-8 {
-        flex-basis: calc((100% / 12) * 8);
-        max-width: calc((100% / 12) * 8);
-    }
-    .col-l-9 {
-        flex-basis: calc((100% / 12) * 9);
-        max-width: calc((100% / 12) * 9);
-    }
-    .col-l-10 {
-        flex-basis: calc((100% / 12) * 10);
-        max-width: calc((100% / 12) * 10);
-    }
-    .col-l-11 {
-        flex-basis: calc((100% / 12) * 11);
-        max-width: calc((100% / 12) * 11);
-    }
-    .col-l-12 {
-        flex-basis: calc((100% / 12) * 12);
-        max-width: calc((100% / 12) * 12);
-    }
-    /* Col Offset */
-    .col-l-offset-1 {
-        margin-left: calc((100% / 12) * 1);
-    }
-    .col-l-offset-2 {
-        margin-left: calc((100% / 12) * 2);
-    }
-    .col-l-offset-3 {
-        margin-left: calc((100% / 12) * 3);
-    }
-    .col-l-offset-4 {
-        margin-left: calc((100% / 12) * 4);
-    }
-    .col-l-offset-5 {
-        margin-left: calc((100% / 12) * 5);
-    }
-    .col-l-offset-6 {
-        margin-left: calc((100% / 12) * 6);
-    }
-    .col-l-offset-7 {
-        margin-left: calc((100% / 12) * 7);
-    }
-    .col-l-offset-8 {
-        margin-left: calc((100% / 12) * 8);
-    }
-    .col-l-offset-9 {
-        margin-left: calc((100% / 12) * 9);
-    }
-    .col-l-offset-10 {
-        margin-left: calc((100% / 12) * 10);
-    }
-    .col-l-offset-11 {
-        margin-left: calc((100% / 12) * 11);
-    }
-}
+/*
